--- a/culture.html
+++ b/culture.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kayan Culture - Long Bedian, Sarawak</title>
+    <title>Long Bedian, Sarawak - Culture</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Link to our external stylesheet -->
     <link rel="stylesheet" href="assets/css/styles.css">
     
     <script>
+        // Tailwind config remains here to be loaded by the script
         tailwind.config = {
             theme: {
                 extend: {
@@ -28,12 +29,26 @@
     <!-- 1. Navbar (Shared Across All Views) -->
     <header class="sticky top-0 z-50 bg-white shadow-lg">
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
+            <!-- Link to index.html for the logo -->
             <a href="index.html" class="text-2xl font-bold text-primary-green hover:text-green-800 transition duration-300">
-                L. Bedian
+                Long Bedian
             </a>
-            <div class="hidden md:flex space-x-8">
+            <div class="hidden md:flex space-x-8 items-center">
+                <!-- Update all hrefs to point to .html files -->
                 <a href="index.html" class="desktop-nav-link text-gray-600 hover:text-primary-green font-medium transition duration-300">Home</a>
-                <a href="about.html" class="desktop-nav-link text-gray-600 hover:text-primary-green font-medium transition duration-300">Our Story</a>
+                
+                <!-- IMPROVEMENT: "Our Story" is now a dropdown -->
+                <div class="relative dropdown">
+                    <a href="about.html" class="desktop-nav-link text-gray-600 hover:text-primary-green font-medium transition duration-300 flex items-center">
+                        Our Story
+                        <svg class="w-5 h-5 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
+                    </a>
+                    <!-- Dropdown menu -->
+                    <div class="dropdown-content">
+                        <a href="jkkk-chart.html" class="dropdown-link">JKKK Chart</a>
+                    </div>
+                </div>
+
                 <!-- Set "Culture" as the active link on this page -->
                 <a href="culture.html" class="desktop-nav-link text-primary-green border-b-2 border-primary-green font-medium transition duration-300">Culture</a>
                 <a href="explore.html" class="desktop-nav-link text-gray-600 hover:text-primary-green font-medium transition duration-300">Explore</a>
@@ -50,6 +65,8 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-inner">
             <a href="index.html" class="mobile-nav-link block py-2 px-4 text-sm text-gray-700 hover:bg-primary-green hover:text-white transition duration-200">Home</a>
             <a href="about.html" class="mobile-nav-link block py-2 px-4 text-sm text-gray-700 hover:bg-primary-green hover:text-white transition duration-200">Our Story</a>
+            <!-- IMPROVEMENT: Added sub-link for mobile -->
+            <a href="jkkk-chart.html" class="mobile-nav-sublink block py-2 pl-8 pr-4 text-sm text-gray-600 hover:bg-primary-green hover:text-white transition duration-200">&hookrightarrow; JKKK Chart</a>
             <a href="culture.html" class="mobile-nav-link block py-2 px-4 text-sm text-gray-700 hover:bg-primary-green hover:text-white transition duration-200">Culture</a>
             <a href="explore.html" class="mobile-nav-link block py-2 px-4 text-sm text-gray-700 hover:bg-primary-green hover:text-white transition duration-200">Explore</a>
             <a href="contact.html" class="mobile-nav-link block py-2 px-4 text-sm text-gray-700 hover:bg-primary-green hover:text-white transition duration-200">Contact Us</a>
@@ -95,7 +112,7 @@
                         <p class="text-gray-600 mb-4">
                             The Kayan are renowned masters of <strong class="text-primary-green">Beadwork</strong> (lavish ornaments and costumes), <strong class="text-primary-green">Wood Carving</strong> (elaborate burial poles and longhouse decorations), and <strong class="text-primary-green">Rattan Weaving</strong> (durable baskets and mats). These objects are vital to social status and ritual life.
                         </p>
-                        <img src="https://placehold.co/400x300/FCD34D/047857?text=Kayan+Beadwork" alt="Kayan Beadwork" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/FCD34D/047857?text=Image+Not+Found'">
+                        <img src="https://placehold.co/400x300/FCD34D/047857?text=Kayan+Beadwork" alt="Kayan Beadwork" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/FCD34D/047857?text=Image+Not+Available'">
                     </div>
                     <!-- Clothing -->
                     <div>
@@ -103,7 +120,7 @@
                         <p class="text-gray-600 mb-4">
                             Ceremonial attire features stunning use of intricate beadwork, animal teeth, feathers, and traditional hand-woven cloths. The distinctive headgear often incorporates **Hornbill feathers**, a symbol of high status and bravery.
                         </p>
-                        <img src="https://placehold.co/400x300/10B981/ffffff?text=Traditional+Kayan+Dress" alt="Kayan Traditional Dress" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/10B981/ffffff?text=Image+Not+Found'">
+                        <img src="https://placehold.co/400x300/10B981/ffffff?text=Traditional+Kayan+Dress" alt="Kayan Traditional Dress" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/10B981/ffffff?text=Image+Not+Available'">
                     </div>
                     <!-- Food -->
                     <div>
@@ -111,7 +128,7 @@
                         <p class="text-gray-600 mb-4">
                             Our diet centers on freshly grown rice and ingredients harvested from the jungle or river. Signature dishes include <strong class="text-primary-green">Ulat Mayas</strong> (jungle vegetable stir-fry) and <strong class="text-primary-green">Panggi</strong> (meat or fish cooked in bamboo over an open fire).
                         </p>
-                        <img src="https://placehold.co/400x300/92400E/ffffff?text=Panggi+Cooked+in+Bamboo" alt="Traditional Food" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/92400E/ffffff?text=Image+Not+Found'">
+                        <img src="https://placehold.co/400x300/92400E/ffffff?text=Panggi+Cooked+in+Bamboo" alt="Traditional Food" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/92400E/ffffff?text=Image+Not+Available'">
                     </div>
                 </div>
             </section>
