--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       This path points to your local video file
                       as shown in your file structure.
                     -->
-                    <source src="videos/video2.mp4" type="video/mp4">
+                    <source src="videos/home.MOV" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -114,7 +114,7 @@
                     LONG BEDIAN
                 </h1>
                 <p class="text-xl sm:text-3xl text-secondary-gold font-light mb-8 italic shadow-text">
-                    — Peji, peju, pejoh —
+                    — PEJI, PEJU, PEJOH —
                 </p>
                 <a href="about.html" class="inline-block px-8 py-3 bg-primary-green text-white font-semibold rounded-full shadow-lg hover:bg-green-700 transition duration-300 transform hover:scale-105">
                     Discover Our Story
@@ -132,10 +132,9 @@
                         &ldquo;
                     </div>
                     <p class="text-xl md:text-2xl font-light text-gray-700 leading-relaxed mb-6">
-                        We welcome you to our ancestral lands. Here, the river provides, the jungle sustains, and the spirit of the Kayan people thrives in unity. Come, share our heritage.
-                    </p>
+                        Peji, peju, pejoh’ is a phrase in the Bidayuh, Iban, and Orang Ulu languages that carries the meaning of unity. This phrase symbolizes the unity practiced among the communities of Borneo.
                     <p class="text-md font-semibold text-primary-green">
-                        — Tuai Rumah Awing Jalong, Longhouse Leader (Mock Quote)
+                        
                     </p>
                 </div>
 
