--- a/about.html
+++ b/about.html
@@ -86,21 +86,21 @@
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 items-center">
                     <div class="lg:col-span-2 space-y-4">
                         <p class="text-gray-600 leading-relaxed">
-                            Long Bedian's history is deeply intertwined with the **Baram River**, the ancestral highway for the Kayan people. The village was founded by early Kayan pioneers who migrated upstream, seeking fertile lands for farming and abundant fishing grounds. The current location was strategically chosen for its elevation, offering protection from floods and optimal access to the surrounding rainforest resources.
+                            Long Bedian is one of the largest and most established Kayan settlements in the Telang Usan District of Miri Division, Sarawak. Located deep within the Baram region, the village lies approximately 200 km from Miri and is accessible via a five-hour journey by four-wheel drive. The community traces its origins to a long migration that began in the late 19th century, eventually settling permanently in Long Bedian in 1946. Over the decades, the village transformed steadily as education, healthcare, and religious institutions were introduced, marking the beginning of modern development for the area.
                         </p>
                         <p class="text-gray-600 leading-relaxed">
-                            A significant moment in our history was the construction of the large modern longhouse, a symbol of community resilience and adaptation. It replaced older, smaller structures, signifying the unity and growth of the village in the modern era. Our founders established a foundation built on cooperation, respect for the river, and the enduring customs of the Orang Ulu.
+                            Today, Long Bedian stands as a thriving rural hub known for its strong community spirit and continuous progress. Facilities such as schools, a clinic, Wisma Bedian, shop lots, and community halls support daily life and administration, while cultural spaces like the village hall and church enrich social activities. Recognized under the Kampung Gerak Desa Wawasan (GDW) programme, Long Bedian continues to balance cultural heritage with modern changes, serving as an important center for surrounding settlements in the upper Baram region.
                         </p>
                     </div>
                     <div>
-                        <img src="https://placehold.co/400x300/4B5563/ffffff?text=Historical+Photo" 
+                        <img src= "assets/images/Overview.jpg" 
                              alt="Early community photo" 
                              class="w-full h-auto rounded-lg shadow-md"
                              onerror="this.src='https://placehold.co/400x300/4B5563/ffffff?text=Image+Not+Available'">
                     </div>
                 </div>
             </section>
-
+            
             <!-- 2. Location & Community Overview -->
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
                 <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Our Community and Location</h2>
@@ -108,21 +108,29 @@
                     <div>
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Community Overview</h3>
                         <p class="text-gray-600 mb-4">
-                            Long Bedian is home to approximately **500 residents**, primarily composed of the **Kayan ethnic group**. We also welcome members of other Orang Ulu sub-groups. The village operates under the guidance of the <strong class="text-primary-green">Tuai Rumah (Longhouse Headman)</strong> and the Village Development and Security Committee (JKKK), ensuring traditional laws and modern governance work hand-in-hand.
+                            The Long Bedian community is close-knit, diverse, and culturally rich, comprising mainly Kayan, Kelabit, and other indigenous groups. Villagers actively participate in traditional music, dance, festivals, and communal farming, which fosters a strong sense of identity and unity. Over time, the community has embraced education, healthcare, tourism, and entrepreneurship, with initiatives like Tapun Homestay and eco-tourism programs connecting local heritage to the modern economy. Leadership structures such as the village head, JKKK, help maintain social harmony, governance, and sustainable development within the village.
                         </p>
                         <p class="text-lg font-bold text-gray-700">Our Motto:</p>
                         <blockquote class="italic text-gray-600 mt-2 p-3 border-l-4 border-secondary-gold bg-gray-50 rounded-r-lg">
-                            "Bersatu Teguh, Beradat Kukun" - Strong in Unity, Enduring in Custom.
+                            "Bersatu terus maju" - United, we move forward.
                         </blockquote>
                     </div>
                     <div>
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Location</h3>
                         <p class="text-gray-600 mb-4">
-                            We are nestled deep in the interior of Sarawak, along the upper reaches of the **Baram River**, about halfway between Miri and Bario. While remote, access is typically via a mix of logging roads and longboat transport, a journey that offers breathtaking views of the Bornean rainforest.
+                            We are nestled deep within the upper Baram region, it is approximately 200 km from Miri City and reachable via a scenic five-hour journey by four-wheel-drive. Surrounded by dense forests, rivers, and highland terrain, the village serves as a gateway to nearby settlements and is known for its unique natural beauty and cultural significance.
                         </p>
-                        <!-- Map Placeholder -->
-                        <div class="bg-gray-200 h-48 flex items-center justify-center rounded-lg shadow-inner">
-                            <p class="text-gray-500 font-medium">Placeholder for Location Map Pinpoint</p>
+                          <!-- IMPROVEMENT: Replaced placeholder div with a live Google Map -->
+                        <div class="h-64 w-full rounded-lg shadow-inner overflow-hidden border">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.0746884061346!2d114.73093977529669!3d3.793904096179946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32190e3eccb0e1af%3A0x87d20d3aff0c1df5!2sLong%20Bedian%20Sub-District%20Office!5e0!3m2!1sen!2smy!4v1763185509670!5m2!1sen!2smy"
+                                width="100%"
+                                height="100%"
+                                style="border:0;"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
                         </div>
                     </div>
                 </div>
