--- a/explore.html
+++ b/explore.html
@@ -173,22 +173,19 @@
                 </div>
             </section>
 
-            <!-- 3. Google Map -->
+            <!-- 3. Key Locations Map Image -->
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
                 <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Key Locations Map</h2>
-                <div class="w-full h-96 rounded-lg shadow-inner overflow-hidden">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15926.16110940385!2d114.61863605!3d3.843640099999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32130e5f5241e72b%3A0xe5493c83e20e8b26!2sLong%20Bedian%2C%20Sarawak%2C%20Malaysia!5e0!3m2!1sen!2smy!4v1715000000000!5m2!1sen!2smy" 
-                        width="100%" 
-                        height="100%" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+                <div class="w-full rounded-lg shadow-inner overflow-hidden">
+                    <!-- Replace with your map image URL -->
+                    <img 
+                        src="assets/images/Geomap.jpg" 
+                        alt="Long Bedian Key Locations Map" 
+                        class="w-full h-auto object-contain"
+                        onerror="this.src='https://placehold.co/1200x800/047857/ffffff?text=Map+Image+Not+Found'">
                 </div>
                 <p class="text-sm text-center text-gray-500 mt-4">
-                    The map pinpoints the Long Bedian area.
+                    Map showing key locations and attractions in Long Bedian area.
                 </p>
             </section>
 
