--- a/jkkk-chart.html
+++ b/jkkk-chart.html
@@ -87,7 +87,7 @@
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
                 <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Organisational Chart</h2>
                 <div class="flex justify-center">
-                    <img src="https://placehold.co/1200x800/f3f4f6/374151?text=JKKK+Organisational+Chart"
+                    <img src="assets/images/JKKK.jpg" 
                          alt="JKKK Organisational Chart"
                          class="w-full h-auto rounded-lg shadow-md border"
                          onerror="this.src='https://placehold.co/1200x800/f3f4f6/374151?text=Image+Not+Available'">
