--- a/culture.html
+++ b/culture.html
@@ -84,19 +84,28 @@
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
                 <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Annual Rites and Celebrations</h2>
                 <p class="text-gray-600 mb-6">
-                    Life in Long Bedian is marked by the rhythm of the seasons and ancient customs. Our major ceremonies often revolve around the agricultural calendar and significant life events, reinforcing community bonds.
-                </p>
+                    Life in Long Bedian follows the rhythm of the seasons and the traditions passed down through generations. Kayan ceremonies often revolve around the agricultural cycle and major life events, strengthening communal bonds and cultural identity.                </p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-primary-green/5 p-6 rounded-lg border-l-4 border-secondary-gold">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Tawai (Harvest Festival)</h3>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Dau Ledoh (Harvest Thanksgiving Festival)</h3>
                         <p class="text-sm text-gray-600">
-                            The Tawai is the Kayan equivalent of the Gawai Dayak, celebrating a successful rice harvest. It is a time for feasting, drinking *burak* (rice wine), traditional dancing, and giving thanks to the spirits for their bounty.
+                            The Dau Ledoh is the traditional peyen harvest thanksgiving festival, celebrated after the successful rice harvest. It is a time for the community to come together in gratitude for abundance and protection throughout the year.
+                        </p>
+                        <p class="text-sm text-gray-600 mt-3"> 
+                            The festival features communal feasting, cultural performances, traditional dances, chanting, and competitions that showcase Kayan heritage. Dau Ledoh also serves as a moment for giving thanks to ancestral spirits and the divine for blessings of prosperity and harmony. Today, it is often celebrated alongside wider Orang Penan and Orang Iban.                        </p>
+
                         </p>
                     </div>
                     <div class="bg-primary-green/5 p-6 rounded-lg border-l-4 border-secondary-gold">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Peleku (Life-Cycle Rites)</h3>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Life-Cycle Rites</h3>
                         <p class="text-sm text-gray-600">
-                            Rites of passage, known as Peleku, mark important transitions like births, marriages, and deaths. These ceremonies involve specific rituals, chants, and communal gatherings to ensure spiritual blessing and protection.
+                            Kayan culture places strong importance on ceremonies that mark life’s major transitions. These life-cycle rites include rituals for births, marriages, and deaths, each involving specific customs, prayers, and the participation of family and longhouse members.                        
+                        </p>
+                        <p class="text-sm text-gray-600 mt-3"> 
+                            Marriage rites, for example, traditionally include ritual exchanges and community blessings, symbolising the joining of families. Birth rituals welcome and protect the newborn, while mourning and memorial practices honour the departed and guide their spirit safely onward.
+                        </p>
+                        <p class="text-sm text-gray-600 mt-3"> 
+                            These rites reinforce kinship, respect for ancestors, and the spiritual foundations of Kayan society.
                         </p>
                     </div>
                 </div>
@@ -106,32 +115,54 @@
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
                 <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Craftsmanship, Clothing, and Cuisine</h2>
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+
                     <!-- Crafts -->
-                    <div>
+                    <div class="flex flex-col h-full">
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Intricate Handcrafts</h3>
                         <p class="text-gray-600 mb-4">
-                            The Kayan are renowned masters of <strong class="text-primary-green">Beadwork</strong> (lavish ornaments and costumes), <strong class="text-primary-green">Wood Carving</strong> (elaborate burial poles and longhouse decorations), and <strong class="text-primary-green">Rattan Weaving</strong> (durable baskets and mats). These objects are vital to social status and ritual life.
+                            The Kayan are renowned masters of <strong class="text-primary-green">Beadwork</strong> (lavish ornaments and costumes), 
+                            <strong class="text-primary-green">Wood Carving</strong> (elaborate burial poles and longhouse decorations), 
+                            and <strong class="text-primary-green">Rattan Weaving</strong> (durable baskets and mats). 
+                            These objects are vital to social status and ritual life.
                         </p>
-                        <img src="https://placehold.co/400x300/FCD34D/047857?text=Kayan+Beadwork" alt="Kayan Beadwork" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/FCD34D/047857?text=Image+Not+Available'">
+                        <img src="assets/images/crafts.jpg" 
+                            alt="Kayan Beadwork" 
+                            class="mt-auto w-full h-60 object-cover rounded-lg shadow-md"
+                            onerror="this.src='https://placehold.co/400x300/FCD34D/047857?text=Image+Not+Available'">
                     </div>
+
                     <!-- Clothing -->
-                    <div>
+                    <div class="flex flex-col h-full">
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Traditional Attire</h3>
                         <p class="text-gray-600 mb-4">
-                            Ceremonial attire features stunning use of intricate beadwork, animal teeth, feathers, and traditional hand-woven cloths. The distinctive headgear often incorporates **Hornbill feathers**, a symbol of high status and bravery.
+                            Ceremonial attire features intricate beadwork, animal teeth, feathers, and hand-woven cloths.
+                            The headgear often incorporates <strong class="text-primary-green">Hornbill feathers</strong>, 
+                            a symbol of status and bravery.
                         </p>
-                        <img src="https://placehold.co/400x300/10B981/ffffff?text=Traditional+Kayan+Dress" alt="Kayan Traditional Dress" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/10B981/ffffff?text=Image+Not+Available'">
+                        <img src="assets/images/tradisionalclothes.jpeg"
+                            alt="Kayan Traditional Dress"
+                            class="mt-auto w-full h-60 object-cover rounded-lg shadow-md"
+                            onerror="this.src='https://placehold.co/400x300/10B981/ffffff?text=Image+Not+Available'">
                     </div>
+
                     <!-- Food -->
-                    <div>
+                    <div class="flex flex-col h-full">
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Authentic Cuisine</h3>
                         <p class="text-gray-600 mb-4">
-                            Our diet centers on freshly grown rice and ingredients harvested from the jungle or river. Signature dishes include <strong class="text-primary-green">Ulat Mayas</strong> (jungle vegetable stir-fry) and <strong class="text-primary-green">Panggi</strong> (meat or fish cooked in bamboo over an open fire).
+                            The Kayan diet centers on freshly grown rice and jungle/river ingredients. 
+                            Signature dishes include <strong class="text-primary-green">Ulat Mayas</strong> 
+                            (jungle vegetable stir-fry) and <strong class="text-primary-green">Panggi</strong> 
+                            (meat or fish cooked in bamboo).
                         </p>
-                        <img src="https://placehold.co/400x300/92400E/ffffff?text=Panggi+Cooked+in+Bamboo" alt="Traditional Food" class="w-full h-auto rounded-lg shadow-md mt-4" onerror="this.src='https://placehold.co/400x300/92400E/ffffff?text=Image+Not+Available'">
+                        <img src="assets/images/food.jpeg"
+                            alt="Traditional Food"
+                            class="mt-auto w-full h-60 object-cover rounded-lg shadow-md"
+                            onerror="this.src='https://placehold.co/400x300/92400E/ffffff?text=Image+Not+Available'">
                     </div>
+
                 </div>
             </section>
+
 
             <!-- 3. Music, Dance, and Folklore -->
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
@@ -140,7 +171,7 @@
                     <div class="space-y-4">
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Music and Dance</h3>
                         <p class="text-gray-600">
-                            The haunting sound of the **Sape'** (a stringed instrument, sometimes called the boat lute) is synonymous with Orang Ulu culture. It is played during longhouse gatherings, often accompanying the **Ngajat** dance. The movements of the Ngajat, particularly the graceful feather-wielding dance by women, are performed to honor guests and celebrate success.
+                            The haunting sound of the <strong class="text-primary-green">Sape'</strong> (a stringed instrument, sometimes called the boat lute) is synonymous with Orang Ulu culture. It is played during longhouse gatherings, often accompanying the <strong class="text-primary-green">Ngajat</strong> dance. The movements of the Ngajat, particularly the graceful feather-wielding dance by women, are performed to honor guests and celebrate success.
                         </p>
                         <h3 class="text-2xl font-semibold text-primary-green mb-3 pt-4">Local Stories and Folklore</h3>
                         <p class="text-gray-600">
@@ -149,7 +180,10 @@
                     </div>
                     <div>
                         <div class="bg-gray-200 h-64 flex items-center justify-center rounded-lg shadow-inner">
-                            <p class="text-gray-500 font-medium">Placeholder for Sape' Music Clip or Dance Photo</p>
+                            <img src="assets/images/sape.jpg"
+                            alt="Traditional Food"
+                            class="mt-auto w-full h-64 object-cover rounded-lg shadow-md"
+                            onerror="this.src='https://placehold.co/400x300/92400E/ffffff?text=Image+Not+Available'">
                         </div>
                     </div>
                 </div>
