--- a/explore.html
+++ b/explore.html
@@ -85,53 +85,19 @@
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     
-                    <!-- Spot 1: Waterfalls -->
+                    <!-- Spot 1: Rumah Panjang Long Bedian -->
                     <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
-                        <img src="https://placehold.co/600x400/065F46/ffffff?text=Hidden+Waterfall" alt="Hidden Waterfall" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/065F46/ffffff?text=Image+Not+Found'">
+                        <img src="assets/images/rumah.jpeg" alt="Hidden Waterfall" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/065F46/ffffff?text=Image+Not+Found'">
                         <div class="p-4">
-                            <h3 class="text-xl font-semibold text-primary-green mb-1">Jungle Waterfalls</h3>
+                            <h3 class="text-xl font-semibold text-primary-green mb-1">Rumah Panjang Long Bedian</h3>
                             <p class="text-sm text-gray-600">
-                                Guided treks lead to pristine waterfalls hidden deep within the primary rainforest, offering a refreshing natural pool for a swim.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Spot 2: River Caves -->
-                    <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
-                        <img src="https://placehold.co/600x400/4B5563/ffffff?text=River+Cave+Entrance" alt="River Cave" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/4B5563/ffffff?text=Image+Not+Found'">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold text-primary-green mb-1">Baram River Caves</h3>
-                            <p class="text-sm text-gray-600">
-                                Explore smaller limestone caves accessible by longboat, historically used by tribespeople for shelter or burial rites.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Activity 1: Jungle Trekking -->
-                    <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
-                        <img src="https://placehold.co/600x400/22C55E/ffffff?text=Jungle+Trekking+Guide" alt="Jungle Trekking" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/22C55E/ffffff?text=Image+Not+Found'">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold text-primary-green mb-1">Guided Nature Walks</h3>
-                            <p class="text-sm text-gray-600">
-                                Learn about traditional medicinal plants, hunting techniques, and local fauna from experienced community guides.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Activity 2: Cultural Workshops -->
-                    <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
-                        <img src="https://placehold.co/600x400/92400E/ffffff?text=Weaving+Workshop" alt="Weaving Workshop" class="w-full h-auto object-cover" onerror="this.src='https://placehold.co/600x400/92400E/ffffff?text=Image+Not+Found'">
-                        <div class="p-4">
-                            <h3 class="text-xl font-semibold text-primary-green mb-1">Kayan Craft Workshops</h3>
-                            <p class="text-sm text-gray-600">
-                                Participate in hands-on workshops to learn beadwork, Sape' playing basics, or rattan weaving from local artisans.
-                            </p>
+                                Step into the heart of Long Bedian heritage at the Long Bedian Longhouse. Built in the 1950s, it offers an authentic glimpse of traditional Sarawakian life. Made from durable Bornean hardwood, it’s both a living home and a cultural landmark.
                         </div>
                     </div>
 
                     <!-- Activity 3: Local Market -->
                     <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
-                        <img src="https://placehold.co/600x400/F97316/ffffff?text=Local+Crafts+Market" alt="Local Market" class="w-full h-auto object-cover" onerror="this.src='https://placehold.co/600x400/F97316/ffffff?text=Image+Not+Found'">
+                        <img src="assets/images/kedai.jpeg" alt="Local Market" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/F97316/ffffff?text=Image+Not+Found'">
                         <div class="p-4">
                             <h3 class="text-xl font-semibold text-primary-green mb-1">Local Crafts Market</h3>
                             <p class="text-sm text-gray-600">
@@ -139,6 +105,30 @@
                             </p>
                         </div>
                     </div>
+
+                    <!-- Activity 1: Taman Rekreasi Sungai Mirah Tenyok -->
+                    <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
+                        <img src="assets/images/Sungai_Mirah.webp" alt="Taman Rekreasi Sungai Mirah Tenyok" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/22C55E/ffffff?text=Image+Not+Found'">
+                        <div class="p-4">
+                            <h3 class="text-xl font-semibold text-primary-green mb-1">Taman Rekreasi Sungai Mirah Tenyok</h3>
+                            <p class="text-sm text-gray-600">
+                                A peaceful nature spot featuring clear river views, lush greenery, and relaxing picnic areas. Perfect for family outings, swimming, and enjoying the calm atmosphere of the rainforest.                            </p>
+                        </div>
+                    </div>
+
+                    <!-- Spot 2: River Caves -->
+                    <div class="rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-300 border border-primary-green/20">
+                        <img src="assets/images/Tenyuk.jpeg" alt="River Cave" class="w-full h-48 object-cover" onerror="this.src='https://placehold.co/600x400/4B5563/ffffff?text=Image+Not+Found'">
+                        <div class="p-4">
+                            <h3 class="text-xl font-semibold text-primary-green mb-1">Tenyuk Waterfall</h3>
+                            <p class="text-sm text-gray-600">
+                                An hour from Kampung Long Bedian, offer a serene escape into untouched Bornean nature. Safe for swimming, visitors can enjoy camping, picnics, and river activities like kayaking and boating.                            
+                            </p>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </section>
 
@@ -175,7 +165,7 @@
 
             <!-- 3. Key Locations Map Image -->
             <section class="mb-16 p-8 bg-white rounded-xl shadow-lg">
-                <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Key Locations Map</h2>
+                <h2 class="text-3xl font-bold text-gray-700 mb-6 border-b pb-2">Geomaps Long Bedian</h2>
                 <div class="w-full rounded-lg shadow-inner overflow-hidden">
                     <!-- Replace with your map image URL -->
                     <img 
