--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         &ldquo;
                     </div>
                     <p class="text-xl md:text-2xl font-light text-gray-700 leading-relaxed mb-6">
-                        Peji, peju, pejoh’ is a phrase in the Bidayuh, Iban, and Orang Ulu languages that carries the meaning of unity. This phrase symbolizes the unity practiced among the communities of Borneo.
+                        ’Peji, peju, pejoh’ is a phrase in the Kayan, Penan, Kelabit, Iban, Kenyah languages that carries the meaning of unity. This phrase symbolizes the unity practiced among the communities of Borneo.
                     <p class="text-md font-semibold text-primary-green">
                         
                     </p>
