--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center md:text-left">
                 <div class="md:flex justify-between items-center">
                     <div class="flex items-center justify-center md:justify-start mb-4 md:mb-0">
-                        <p class="text-lg font-semibold">Long Bedian, Baram, Sarawak</p>
+                        <p class="text-lg font-semibold">Long Bedian, Miri, Sarawak</p>
                         
                     </div>
                     <div class="flex space-x-6 justify-center">
