--- a/contact.html
+++ b/contact.html
@@ -164,21 +164,30 @@
         </div>
     </main>
 
-    <!-- 3. Footer (Shared Across All Views) -->
-    <footer class="bg-gray-800 text-white py-8 mt-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center md:text-left">
-            <div class="md:flex justify-between items-center">
-                <p class="text-lg font-semibold mb-4 md:mb-0">Long Bedian, Baram, Sarawak</p>
-                <div class="flex space-x-6 justify-center">
-                    <a href="#" class="text-gray-400 hover:text-white transition duration-300">Privacy Policy</a>
-                    <a href="#" class="text-gray-400 hover:text-white transition duration-300">Terms of Use</a>
+     <!-- 3. Footer (Shared Across All Views) -->
+        <footer class="bg-gray-800 text-white py-8 mt-12">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center md:text-left">
+                <div class="md:flex justify-between items-center">
+                    <div class="flex items-center justify-center md:justify-start mb-4 md:mb-0">
+                        <p class="text-lg font-semibold">Long Bedian, Miri, Sarawak</p>
+                        
+                    </div>
+                    <div class="flex space-x-6 justify-center">
+                        <a href="#" class="text-gray-400 hover:text-white transition duration-300">Privacy Policy</a>
+                        <a href="#" class="text-gray-400 hover:text-white transition duration-300">Terms of Use</a>
+                    </div>
+                </div>
+                <div class="mt-4 border-t border-gray-700 pt-4">
+                    <div class="flex items-center justify-center space-x-3">
+                        <p class="text-sm text-gray-500">&copy; Initiative by YSS alumni.</p>
+                         <img src="assets/images/YSS logo.png" 
+                            alt="Long Bedian Logo" 
+                            class="h-6 w-15"
+                            onerror="this.src='https://placehold.co/100x100/047857/ffffff?text=LB'">
+                    </div>
                 </div>
             </div>
-            <div class="mt-4 border-t border-gray-700 pt-4 text-center">
-                <p class="text-sm text-gray-500">&copy; 2025 Long Bedian Community. All Rights Reserved.</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
     <!-- Link to our external JavaScript file -->
     <script src="assets/js/app.js"></script>
