update on contact

--- a/culture.html
+++ b/culture.html
@@ -150,9 +150,9 @@
                         <h3 class="text-2xl font-semibold text-primary-green mb-3">Authentic Cuisine</h3>
                         <p class="text-gray-600 mb-4">
                             The Kayan diet centers on freshly grown rice and jungle/river ingredients. 
-                            Signature dishes include <strong class="text-primary-green">Ulat Mayas</strong> 
-                            (jungle vegetable stir-fry) and <strong class="text-primary-green">Panggi</strong> 
-                            (meat or fish cooked in bamboo).
+                            Signature dishes include <strong class="text-primary-green">Pitoh Bahah</strong> 
+                            (glutinous rice rolls) and <strong class="text-primary-green">Dinuh</strong> 
+                            (deep-fried glutinous rice flour snack).
                         </p>
                         <img src="assets/images/food.jpeg"
                             alt="Traditional Food"
@@ -175,7 +175,7 @@
                         </p>
                         <h3 class="text-2xl font-semibold text-primary-green mb-3 pt-4">Local Stories and Folklore</h3>
                         <p class="text-gray-600">
-                            Folklore is passed down through generations via storytelling (*tekna*). These stories often feature legendary heroes, spirits of the forest and river, and the origins of the Kayan tribes, serving as moral guides and historical records.
+                            Folklore is passed down through generations via storytelling <strong class="text-primary-green">tekna</strong>. These stories often feature legendary heroes, spirits of the forest and river, and the origins of the Kayan tribes, serving as moral guides and historical records.
                         </p>
                     </div>
                     <div>
